[project]
name = "causalml"
version = "0.14.1"
description = "Python Package for Uplift Modeling and Causal Inference with Machine Learning Algorithms"
readme = { file = "README.md", content-type = "text/markdown" }

authors = [
    { "name" = "Huigang Chen" },
    { "name" = "Totte Harinen" },
    { "name" = "Jeong-Yoon Lee" },
    { "name" = "Jing Pan" },
    { "name" = "Mike Yung" },
    { "name" = "Zhenyu Zhao" }
]
maintainers = [
    { name = "Jeong-Yoon Lee" }
]
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.7"
dependencies = [
    "forestci",
    "pathos",
    "pip",
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "statsmodels",
    "Cython",
    "seaborn",
    "xgboost",
    "pydotplus",
    "tqdm",
    "shap",
    "dill",
    "lightgbm",
    "pygam",
    "packaging",
    "torch",
    "pyro-ppl",
    "graphviz",
]

[project.optional-dependencies]
test = [
    "pytest>=4.6",
    "pytest-cov>=4.0"
]
tf = [
    "tensorflow>=2.4.0"
]


[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "numpy",
    "scikit-learn",
]

[project.urls]
homepage = "https://github.com/uber/causalml"
